# ai-studio

./: .gitignore  AGENTS.md  README.md  _DRAFT_AGENTS.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  datasets.py  dependencies.py  evaluation.py  export.py  export_page_context.py  pages.py  projects.py  responses.py  splits.py  training.py
app/core/: __init__.py  dataset_service.py  evaluation_service.py  exceptions.py  export_service.py  project_service.py  split_service.py  training_form_layout.py  training_service.py
app/datasets/: __init__.py  augmentations.py  base.py  splits.py
app/evaluation/: __init__.py  evaluator.py  metrics.py
app/export/: __init__.py  onnx_export.py  registry.py  validation.py
app/models/: __init__.py  catalog.py
app/schemas/: __init__.py  dataset.py  evaluation.py  export.py  project.py  split.py  training.py
app/storage/: __init__.py  json_store.py  paths.py
app/templates/: base.html
app/training/: __init__.py  callbacks.py  hardware.py  lightning_module.py  losses.py  optimizers.py  schedulers.py  subprocess_runner.py  trainer_factory.py  worker.py
plan/: 00-overview.md  01-project-structure.md  11-roadmap.md
plan/02-data-layer/: 00-storage-layout.md  01-dataset-management.md  02-dataset-formats.md  03-splits.md
plan/03-tasks/: 00-task-registry.md  01-classification.md  02-anomaly-detection.md  03-object-detection.md  04-oriented-object-detection.md  05-segmentation.md  06-instance-segmentation.md  07-regression.md
tests/: __init__.py  conftest.py
(+92 files in other folders)
